tests/snapshots/trace_solver__spanshot_request@15911006376447710804.snap
---
source: tests/trace_solver.rs
info:
  options:
    ref_binding_on_inherited: AllocTemporary
    mut_binding_on_inherited: Keep
    inherited_ref_on_ref: EatOuter
    allow_ref_pat_on_ref_mut: true
    simplify_expressions: true
    eat_inherited_ref_alone: true
    downgrade_shared_inside_shared: false
  bundle_name: permissive
  request: "&mut ref x: &mut T"
---
&mut ref x @ p: &mut T
// Applying rule `Deref(EatOuter)`
ref x @ *p: T
// Applying rule `BindingBorrow`
x @ &*p: &T
// Applying rule `Binding`
let x: &T = &*p

// Final bindings (simplified):
let x: &T = &*p
